# playr

./: .gitignore  .qmlls.ini  BRANDING.md  CMakeLists.txt  README.md  filehandler.cpp  filehandler.h  main.cpp  player.cpp  player.h  public.h
json/: songs.json
qml/: Main.qml
res/: app.rc
